fixes method get_linear_shunt_compensator_sections; adds tests
Signed-off-by: Christian Biasuzzi <christian.biasuzzi@soft.it>